--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
+    "classnames": "^2.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.3.5"
+    "sass": "^1.51.0",
+    "styled-components": "^5.3.5",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -42,9 +45,8 @@
     "react-is": "^18.0.0",
     "rollup": "^2.70.2",
     "rollup-plugin-visualizer": "^5.6.0",
-    "sass": "^1.50.1",
     "typescript": "^4.6.3",
-    "vite": "^2.9.5",
+    "vite": "^2.9.8",
     "vite-plugin-mock": "^2.9.6"
   }
 }
