--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ typings/
 # Optional npm cache directory
 .npm
 
+# Optional pnpm store directory
+.pnpm-store
+
 # Optional eslint cache
 .eslintcache
 
