--- a/package.json
+++ b/package.json
@@ -11,48 +11,48 @@
     "lint": "eslint --fix --ext .js,.tsx,ts src mock"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-redux": "^8.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux-saga": "^1.1.3",
-    "sass": "^1.51.0",
+    "sass": "^1.53.0",
     "styled-components": "^5.3.5",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
     "@eslint/create-config": "^0.2.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.5",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "@vitejs/plugin-react": "^1.3.2",
+    "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "mockjs": "^1.1.0",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
-    "postcss-nesting": "^10.1.4",
-    "prettier": "^2.6.2",
-    "react-is": "^18.0.0",
-    "rollup": "^2.70.2",
+    "postcss-nesting": "^10.1.9",
+    "prettier": "^2.7.1",
+    "react-is": "^18.2.0",
+    "rollup": "^2.75.7",
     "rollup-plugin-visualizer": "^5.6.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.8",
+    "typescript": "^4.7.4",
+    "vite": "^2.9.12",
     "vite-plugin-mock": "^2.9.6"
   }
 }
