--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
+    "redux": "^4.2.0",
     "redux-saga": "^1.2.1",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
